--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,13 @@
 .read-the-docs {
   color: #888;
 }
+
+p {
+  text-align: left;
+  text-indent: 5%;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+}
