--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,43 @@ table {
   margin-left: auto;
   margin-right: auto;
 }
+
+table.ballots {
+  border-spacing: 0;
+}
+
+td.ballot {
+  padding: 0;
+}
+
+td.vote-delete {
+  min-width: 30px;
+  text-align: center;
+}
+
+td.vote-delete:hover {
+  background-color: black;
+  color: white;
+}
+
+input.score {
+  width: 100%;
+  height: 40px;
+  margin: 0;
+  border: none;
+  outline: none;
+  text-align: center;
+}
+
+/* The following makes the number arrows go away (https://stackoverflow.com/questions/3790935/can-i-hide-the-html5-number-input-s-spin-box): */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+  -moz-appearance:textfield; /* Firefox */
+}
