--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,11 @@ th.candidate-delete:hover {
   color: white;
 }
 
+th.candidate-add:hover {
+  background-color: black;
+  color: white;
+}
+
 input.score {
   width: 100%;
   height: 40px;
@@ -92,6 +97,23 @@ input.score {
   border: none;
   outline: none;
   text-align: center;
+}
+
+input.candidate-input {
+  width: 100px;
+  margin: 0;
+  border: none;
+  outline: none;
+  text-align: center;
+}
+
+input.candidate-input:focus-visible::placeholder {
+  color: transparent;
+}
+
+input.candidate-input::placeholder {
+  font-style: italic;
+  font-size: 16px;
 }
 
 /* The following makes the number arrows go away (https://stackoverflow.com/questions/3790935/can-i-hide-the-html5-number-input-s-spin-box): */
