--- a/src/App.css
+++ b/src/App.css
@@ -49,9 +49,6 @@ p {
 table {
   margin-left: auto;
   margin-right: auto;
-}
-
-table.ballots {
   border-spacing: 0;
 }
 
@@ -75,7 +72,7 @@ td.vote-add:hover {
   color: white;
 }
 
-th.candidate {
+th {
   min-width: 100px;
 }
 
