--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,10 @@ th.candidate-add:hover {
   color: white;
 }
 
+ul {
+  list-style-type: none;
+}
+
 input.score {
   width: 100%;
   height: 40px;
