--- a/src/App.css
+++ b/src/App.css
@@ -66,29 +66,11 @@ td.vote-delete {
   align-content: center;
 }
 
-td.vote-delete:hover {
-  background-color: black;
-  color: white;
-  cursor: pointer;
-}
-
-td.vote-add:hover {
-  background-color: black;
-  color: white;
-  cursor: pointer;
-}
-
 th {
   min-width: 100px;
 }
 
-th.candidate-delete:hover {
-  background-color: black;
-  color: white;
-  cursor: pointer;
-}
-
-th.candidate-add:hover {
+.cell-button:hover {
   background-color: black;
   color: white;
   cursor: pointer;
